--- a/index.html
+++ b/index.html
@@ -4,32 +4,32 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <script src="script.js" defer></script>
-  <link rel="stylesheet" href="style.css">
-  <title>Password Generator</title>
+  <link href="styles.css" rel="stylesheet">
+  <script defer src="script.js"></script>
+  <title>Quiz App</title>
 </head>
 <body>
+
+  <div class="container border border-primary">
+    <div class="row">
+      <div class="col-md-3 border border-primary" id="HS">Current Score: <span id="score"></span></div>
+      <div class="col-md-3 offset-md-6 border border-primary">Time: <span id="time"></span></div>
+    </div>
+</div>
   <div class="container">
-    <h1 class="title">Password Generator</h1>
-    <h3 class="password-display" id="passwordDisplay">password</h3>
-    <form id="passwordGeneratorForm" class="form">
-      <label for="characterAmountNumber">Number Of Characters</label>
-      <div class="character-amount-container">
-        <input type="range" min="1" max="128" value="10" id="characterAmountRange">
-        <input class="number-input" type="number" min="1" max="128" value="10" id="characterAmountNumber">
+    <div id="question-container" class="hide">
+      <div id="question">Question</div>
+      <div id="answer-buttons" class="btn-grid">
+        <button class="btn">Answer 1</button>
+        <button class="btn">Answer 2</button>
+        <button class="btn">Answer 3</button>
+        <button class="btn">Answer 4</button>
       </div>
-
-      <label for="includeUppercase">Include Uppercase</label>
-      <input type="checkbox" id="includeUppercase">
-
-      <label for="includeNumbers">Include Numbers</label>
-      <input type="checkbox" id="includeNumbers">
-
-      <label for="includeSymbols">Include Symbols</label>
-      <input type="checkbox" id="includeSymbols">
-
-      <button type="submit" class="btn">Generate Password</button>
-    </form>
+    </div>
+    <div class="controls">
+      <button id="start-btn" class="start-btn btn">Start</button>
+      <button id="next-btn" class="next-btn btn hide">Next</button>
+    </div>
   </div>
 </body>
 </html>
