--- a/index.html
+++ b/index.html
@@ -4,32 +4,55 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link href="styles.css" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
   <script defer src="script.js"></script>
-  <title>Quiz App</title>
+  <title></title>
 </head>
-<body>
 
-  <div class="container border border-primary">
-    <div class="row">
-      <div class="col-md-3 border border-primary" id="HS">Current Score: <span id="score"></span></div>
-      <div class="col-md-3 offset-md-6 border border-primary">Time: <span id="time"></span></div>
-    </div>
-</div>
+<body>
+ 
   <div class="container">
-    <div id="question-container" class="hide">
-      <div id="question">Question</div>
-      <div id="answer-buttons" class="btn-grid">
-        <button class="btn">Answer 1</button>
-        <button class="btn">Answer 2</button>
-        <button class="btn">Answer 3</button>
-        <button class="btn">Answer 4</button>
-      </div>
+
+    <div class="block content">
+    
+      <div class="wrapper">
+        <div class="col-md-3 offset-md-6 border border-primary">Time Remaining: <span id="time"></span></div>
+
+
+        <form id='form-result' class="hide" action="">
+          <div class="SP-container">
+            <div class="modal-text modal-text-bigger">Done !</div>
+            <div class="modal-text">Right answers:</div>
+
+            <!-- 4. here's where we show right answers: span id="right-answers" -->
+            <div class="modal-text"><span id="right-answers" class="count"> 12 </span> of <span id="all-questions" class="count">count-of-questions</span> (<span id="answers-percent"></span>%)</div> 
+          </div>
+        </form>
+
+          <div id="question-container" class="hide">
+            <div class="number-of-question-text">Question № <span id="current-question">YYY</span> of <span id="all-questions2">XXX</span></div>
+            <div id="question">Question</div>
+            <div id="answer-buttons">
+              <button class="btn">Answer 1</button>
+              <button class="btn">Answer 2</button>
+              <button class="btn">Answer 3</button>
+              <button class="btn">Answer 4</button>
+            </div>
+          </div>
+          <div class="controls">
+            <button id="start-btn" class="start-btn">Start</button>
+            <button id="next-btn" class="next-btn hide">Next</button>
+          </div>
+
+        </div><!-- wrapper-->
+
+      </div><!-- block content-->
+  
+
     </div>
-    <div class="controls">
-      <button id="start-btn" class="start-btn btn">Start</button>
-      <button id="next-btn" class="next-btn btn hide">Next</button>
-    </div>
-  </div>
+
+
+
+
 </body>
 </html>
