--- a/index.html
+++ b/index.html
@@ -8,12 +8,28 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-<a href="Homework 3/index.html"> Homework 3 
-    <br>
-    <a href="Homework 4/index.html"> Homework 4
-    </br>
+<h2>Homework</h2>
 
-        <a href="Homework 5/index.html"> Homework 5
+<a href="Homework 3/index.html"> Homework 3 </a>
+    <br>
+    <a href="Homework 4/index.html"> Homework 4 </a>
+    <br>
+        <a href="Homework 5/index.html"> Homework 5 </a>
+          <br>
+          <a href="Homework 6/index.html"> Homework 6 </a>
+            <br>
+            <a href="Homework 7/index.html"> Homework 7 </a>
+              <br>
+              <a href="Homework 8/index.html"> Homework 8 </a>
+                <br>
+                <a href="Homework 9/index.html"> Homework 9 </a>
+                  <br>
+                  <a href="Homework 10/index.html"> Homework 10 </a>
+<br>
+<br>
+<h2>Projects</h2>
+<br>
+<a href="Project 1/index.html"> Project 1 </a>
 
   <body>
 
