--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           <br>
           <a href="Homework 6/index.html"> Homework 6 </a>
             <br>
-            <a href="Homework 7/index.html"> Homework 7 </a>
+            <a href="Homework 7/index.js"> Homework 7 </a>
               <br>
               <a href="Homework 8/index.html"> Homework 8 </a>
                 <br>
